--- a/style.css
+++ b/style.css
@@ -2,8 +2,15 @@
     position: absolute;
     top: 50%;
     left: 50%;
+    margin-top: 75px;
     transform: translate(-50%,-50%);
-    width: 600px;
-    height: 400px;
+    width: 800px;
+    height: 600px;
     border: 2px solid black;
+}
+body{
+    text-align: center;
+}
+custom{
+    color: black;
 }
